# nakatsuma-data-driven-finance

./: README.md  pyproject.toml
data/: capm.csv
docs/: 2024-11-26-intro.md  2024-12-11.md
src/: 2024-12-11-capm.ipynb  2024-12-11.ipynb  2024-12-18-three-factor-model.ipynb  homework_2_capm.ipynb  notebook.ipynb
