[tool.poetry]
name = "nakatsuma-data-driven-finance"
version = "0.1.0"
description = ""
authors = ["Keisei Akiya <keisei.akiya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
graphviz = "^0.20.3"
japanize-matplotlib = "^1.1.3"
jax = "^0.4.35"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
numpy = ">=1.17,<2"
pandas = "^2.2.3"
patsy = "^1.0.1"
pymc = "^5.18.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
numpyro = "^0.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
