[tool.poetry]
name = "nakatsuma-data-driven-finance"
version = "0.1.0"
description = ""
authors = ["Keisei Akiya <keisei.akiya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
arviz = "^0.20.0"
fastparquet = "^2024.11.0"
graphviz = "^0.20.3"
japanize-matplotlib = "^1.1.3"
jax = "^0.4.35"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
numpy = ">=1.17,<2"
numpyro = "^0.15.3"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pandas-datareader = "^0.10.0"
patsy = "^1.0.1"
pyarrow = "^18.1.0"
pymc = "^5.18.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
yfinance = "^0.2.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
